2008-08-29  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-main.c (initialize_signal_handler):
	Ignore SIGPIPE, so we can handle it ourselves.
	* src/tracker-indexer/tracker-metadata-utils.c: It's possible that the
	indexer is trying to write to the metadata extractor before it
	realizes it has quit/crashed. Handle errors writing to a broken pipe
	and respawn the metadata process context in that case.

2008-08-28  Ivan Frade  <ivan.frade@nokia.com>

	* src/tracker-thumbnailer/tracker-thumbnailer.c:
	Splitted the code in functions. Fixed some memory leaks. Fixed
	crash with incorrect parameters
	
2008-08-28  Philip Van Hoof  <philip@codeminded.be>

	* src/tracker-indexer/tracker-metadata-utils.c
	* src/tracker-indexer/tracker-metadata-utils.h
	* src/tracker-indexer/Makefile.am
	* tests/tracker-indexer/Makefile.am
	* configure.ac: Use Hildon's thumbnailer if available. Similar things
	should be done for other thumbnailers too.
	
2008-08-28  Carlos Garnacho  <carlos@imendio.com>

	* tests/tracker-indexer/tracker-metadata-utils-test.c: Remove tests
	related to metadata merging, this leaves the file mostly empty, but
	would be useful to keep it around when some other tests to
	tracker-indexer are added.

2008-08-28  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-metadata-utils.c (lists_equal)
	(metadata_action_item_new) (calculate_merge_action)
	(add_deleted_items) (tracker_metadata_utils_calculate_merge)
	(tracker_metadata_utils_action_item_free): Removed functions, they
	weren't used anywhere.

2008-08-28  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-thumbnailer/tracker-thumbnailer.c: Use GChecksum instead
	of shipped MD5 implementation.
	* src/tracker-thumbnailer/Makefile.am:
	* src/tracker-thumbnailer/md5.[ch]: Removed MD5 implementation, no 
	longer necessary.

2008-08-28  Carlos Garnacho  <carlos@imendio.com>

	* data/sqlite-stored-procs.sql: Use '#' to begin comments.